2009-06-02  Marek Habersack  <mhabersack@novell.com>

	* HttpApplication.cs: LocateHandler needs to pass current request
	path and filepath to WebConfigurationManager when retrieving
	system.web/httpHandlers section as only this will guarantee that
	any <location> elements relating to the current request's which
	contain system.web/httpHandlers section will be correctly read and
	used. Also fixes reading httpHandlers section if it's found in
	web.config located in a subdirectory. Fixes bug #509069

	* HttpException.cs: 403 errors get same treatment as 404
	below. Fixes bug #509092

2009-06-01  Marek Habersack  <mhabersack@novell.com>

	* HttpException.cs: if custom errors are enabled and the error
	code is 404 show the "standard" 404 error message instead of the
	default custom error mode one. Fixes bug #508649

2009-05-28  Marek Habersack  <mhabersack@novell.com>

	* HttpUtility.cs: fixed UrlDecode for encoded strings which
	should be converted to byte sequences longer than 2 bytes. Fixes
	bug #507666

2009-05-14  Marek Habersack  <mhabersack@novell.com>

	* HttpApplication.cs: LocateHandler won't cache if a default
	handler was returned.

2009-05-07 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* MimeTypes.cs: add silverlight related types.

2009-04-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpContext.cs:
	* HttpWorkerRequest.cs:
	* HttpRuntime.cs: if other parts of the system are using the
	threadpool and we queue requests, once the threadpool is free we
	might still not get back to use it to the maximum extent possible.
	Adding a few more calls to QueuePendingRequest ensures that does not
	happen.

2009-04-24  Marek Habersack  <mhabersack@novell.com>

	* HtmlizedException.cs: make HtmlException derive from
	HttpException. System.Web.Mvc relies upon compile and parse
	exception being descendants of HttpException or otherwise it will
	catch and ignore compilation/parsing errors.

2009-04-16  Marek Habersack  <mhabersack@novell.com>
